--- a/libs/libxcrypt/Makefile
+++ b/libs/libxcrypt/Makefile
@@ -13,6 +13,7 @@ PKG_LICENSE:=LGPL-2.1-or-later
 PKG_LICENSE_FILES:=COPYING.LIB
 
 PKG_FIXUP:=autoreconf
+PKG_FORTIFY_SOURCE:=0
 PKG_INSTALL:=1
 PKG_BUILD_PARALLEL:=1
 
