--- a/net/bcp38/files/bcp38.config
+++ b/net/bcp38/files/bcp38.config
@@ -1,6 +1,6 @@
 config bcp38
 	option enabled 0
-	option interface 'eth1'
+	option interface 'wan'
 	option detect_upstream 1
 	list match '127.0.0.0/8'
 	list match '192.0.2.0/24'    # RFC 5737
