treewide: change argp-standalone to a direct dependency
As preparation to build argp-standalone as dynamic library,
change all packets with a build dependency for it to a direct dependency.
Without this the build will link against the dynamic library and the
buildsystem will complain about the missing dependency.

Signed-off-by: Thomas Langer <tlanger@maxlinear.com>

--- a/multimedia/ttymidi-sysex/Makefile
+++ b/multimedia/ttymidi-sysex/Makefile
@@ -11,7 +11,6 @@ PKG_MIRROR_HASH:=8d6bb738a08a65c25fcc442777750abbee812a24a29236242032e2d76177454
 
 PKG_LICENSE:=GPL-3.0-or-later
 PKG_MAINTAINER:=Daniel Golle <daniel@makrotopia.org>
-PKG_BUILD_DEPENDS:=!USE_GLIBC:argp-standalone
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -20,7 +19,7 @@ define Package/ttymidi-sysex
   CATEGORY:=Sound
   TITLE:=ttymidi (with full bi-di sysex support)
   URL:=https://github.com/cchaussat/ttymidi-sysex
-  DEPENDS:=+alsa-lib
+  DEPENDS:=+alsa-lib +!USE_GLIBC:argp-standalone
 endef
 
 define Package/ttymidi-sysex/description
